Removed references to login & privacy page

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -25,9 +25,6 @@
                 <ul class="navbar__menu">
                         
                         <li class="nav-item">
-                            <a class="navbar__links" asp-area="" asp-page="/Login" style="text-decoration:none">Login</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="navbar__links" asp-area="" asp-page="/FileUpload" style="text-decoration:none">File Upload</a>
                         </li>
                         <li class="nav-item">
@@ -51,11 +48,11 @@
     @RenderBody()      
      
 
-    <footer class="border-top footer text-muted">
+    <!-- <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - PetEmotionsApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
